--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "sequelize": "^6.21.4",
+    "sqlite3": "^5.0.11"
   }
 }
