--- a/package.json
+++ b/package.json
@@ -28,8 +28,12 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "node-fetch": "^3.2.10",
     "nodemon": "^2.0.19",
     "sequelize": "^6.21.4",
     "sqlite3": "^5.0.11"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.4.1"
   }
 }
