--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   },
   "homepage": "https://github.com/shockerqt/arkink-server#readme",
   "dependencies": {
-    "axios": "^0.27.2",
     "body-parser": "^1.20.0",
+    "connect-session-sequelize": "^7.1.5",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
@@ -30,10 +30,12 @@
     "morgan": "^1.10.0",
     "node-fetch": "^3.2.10",
     "nodemon": "^2.0.19",
+    "redis": "^4.3.0",
     "sequelize": "^6.21.4",
     "sqlite3": "^5.0.11"
   },
   "devDependencies": {
+    "eslint": "^8.23.0",
     "sequelize-cli": "^6.4.1"
   }
 }
