--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "connect-session-sequelize": "^7.1.5",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "discord.js": "^14.3.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
@@ -32,7 +33,8 @@
     "nodemon": "^2.0.19",
     "redis": "^4.3.0",
     "sequelize": "^6.21.4",
-    "sqlite3": "^5.0.11"
+    "sqlite3": "^5.0.11",
+    "ws": "^8.8.1"
   },
   "devDependencies": {
     "eslint": "^8.23.0",
